--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <news-list></news-list>
     </main>
 
+    <footer-beritamu></footer-beritamu>
+
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
     <script src="./src/index.js" type="module"></script>
