add loader (style, css)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beritamu | Cari Bacaan Beritamu</title>
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="./src/styles/style.css">
 </head>
 <body>
     <header>
@@ -31,8 +28,7 @@
 
     <footer-beritamu></footer-beritamu>
 
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
-    <script src="./src/index.js" type="module"></script>
+    <!-- <script src="./node_modules/swiper/swiper-bundle.min.js"></script> -->
+    <script src="./dist/bundle.js"></script>
 </body>
 </html>
