--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <section class="select-news-category text-center">
             <div class="container">
                 <h2>Pilih kategori berita</h2>
-                <a href="#" class="btn btn-info mb-1" role="button">Umum</a>
-                <a href="#" class="btn btn-info mb-1" category="business" role="button">Bisnis</a>
-                <a href="#" class="btn btn-info mb-1" category="sports" role="button">Olahraga</a>
-                <a href="#" class="btn btn-info mb-1" category="technology" role="button">Teknologi</a>
-                <a href="#" class="btn btn-info mb-1" category="health" role="button">Kesehatan</a>
-                <a href="#" class="btn btn-info mb-1" category="science" role="button">Sains</a>
-                <a href="#" class="btn btn-info mb-1" category="entertainment" role="button">Hiburan</a>
+                <a href="#" class="btn btn-info mb-1" judul="Umum" role="button">Umum</a>
+                <a href="#" class="btn btn-info mb-1" judul="Bisnis" category="business" role="button">Bisnis</a>
+                <a href="#" class="btn btn-info mb-1" judul="Olahraga" category="sports" role="button">Olahraga</a>
+                <a href="#" class="btn btn-info mb-1" judul="Teknologi" category="technology" role="button">Teknologi</a>
+                <a href="#" class="btn btn-info mb-1" judul="Kesehatan" category="health" role="button">Kesehatan</a>
+                <a href="#" class="btn btn-info mb-1" judul="Sains" category="science" role="button">Sains</a>
+                <a href="#" class="btn btn-info mb-1" judul="Hiburan" category="entertainment" role="button">Hiburan</a>
             </div>
         </section>
         <news-list></news-list>
